Updated sidebar links with the git io and more content

--- a/mkstyle.css
+++ b/mkstyle.css
@@ -11,7 +11,18 @@ div {
     
 }
 
+#aboutmepic {
+    position: relative;
+    text-align: center;
+}
+
 /*side navigation menu used from a previous project*/
+a:link {
+    color: blue;
+}
+a:visited{
+    color: purple;
+}
 .sidenav{
     height: 100%;
     width: 20%;
@@ -51,3 +62,25 @@ div {
 }
 
 
+/* On screens that are less than 700px wide, make the sidebar into a topbar */
+@media screen and (max-width: 700px) {
+  .sidenav {
+    width: 100%;
+    height: auto;
+    position: relative;
+  }
+   .main{
+    margin-left: 0;
+    
+    
+} 
+  .sidenav a {float: left;}
+  div.content {margin-left: 0;}
+     body {
+        overflow-x: hidden !important;
+    }
+    .container {
+        max-width: 100% !important;
+        overflow-x: hidden !important;
+    }
+}
