backbone. needs to fix ALL links and figure out how to merge branches because gh-pages is being stupid

--- a/mkstyle.css
+++ b/mkstyle.css
@@ -1,4 +1,12 @@
-
+p {
+   margin-left: 25%;
+}
+ul {
+    margin-left: 25%;
+}
+p1 {
+    margin-left: 25%;
+}
 div {
     width: 80%;
     height: 100%;
