--- a/mkstyle.css
+++ b/mkstyle.css
@@ -8,33 +8,39 @@ p1 {
     margin-left: 25%;
 }
 div {
-    width: 80%;
+    width: 75%;
     height: 100%;
 }
 #photoMeg {
     position: relative;
-    text-align: center;
-    
-    
+    text-align: center; 
     
 }
+h1{
+    font-family: sans-serif;
+    font-style: oblique;
+    font-size: 40px;
+}
+/*.sansserif {
+  font-family: Arial, Helvetica, sans-serif;
+}*/
 
 #aboutmepic {
     position: relative;
     text-align: center;
 }
-
-/*side navigation menu used from a previous project*/
 a:link {
     color: blue;
 }
 a:visited{
     color: purple;
 }
+/*side navigation menu adapted from a previous project*/
+
 .sidenav{
     height: 100%;
     width: 20%;
-    position: fixed;
+    position: relative;
     margin: 0;
     padding: 0;
     background-color: hotpink;
@@ -50,16 +56,19 @@ a:visited{
     font-size: 25px;
     color: antiquewhite;
     
-   /* transition: 0.3s; */
+   
 }
-.main{
-    margin-left: 20%;
+#everything{
+    margin-left: 25%;
     padding: 1px 16px;
     height: 1000px;
+   
     
 }
     
 /* makes it so when you move the mouse, it changes color */
+
+
 .sidenav a:active{
     background-color:blue;
     color: white;
@@ -77,7 +86,7 @@ a:visited{
     height: auto;
     position: relative;
   }
-   .main{
+   #everything{
     margin-left: 0;
     
     
@@ -87,7 +96,7 @@ a:visited{
      body {
         overflow-x: hidden !important;
     }
-    .container {
+   .container { 
         max-width: 100% !important;
         overflow-x: hidden !important;
     }
