--- a/mkstyle.css
+++ b/mkstyle.css
@@ -1,6 +1,10 @@
 p {
    margin-left: 25%;
 }
+
+header {
+    font-size: 40px;
+}
 ul {
     margin-left: 25%;
 }
@@ -40,7 +44,7 @@ a:visited{
 .sidenav{
     height: 100%;
     width: 20%;
-    position: relative;
+    position: fixed;
     margin: 0;
     padding: 0;
     background-color: hotpink;
@@ -62,7 +66,8 @@ a:visited{
     margin-left: 25%;
     padding: 1px 16px;
     height: 1000px;
-   
+   vertical-align: top;
+    position: absolute;
     
 }
     
